# evdbindkey

./: .gitignore  Makefile.am  README.md  config.h.in  configure.ac  keybindings.c  keybindingsd.c
data/systemd/system/: evdbindkeyd.service.in
src/: client_config.c  client_config.h  evdbindkeyd.c  ipc_sock.c  ipc_sock.h  keybindings.c  keybindingsd.c  logging.c  logging.h  shared_structs.h  signal.c  signal.h
